# CPP_Exercises

./: .gitignore
tp01/: TP1.md
tp01/ex1/: main.cpp
tp01/ex2/: main.cpp
tp01/ex3/: main.cpp  utils.hpp
tp02/: Card.cpp  Card.hpp  Player.cpp  Player.hpp  TP2.md  main  main.cpp
tp03/: TP3.md  exo2  exo2.cpp
tp03/3-hrsoft/: HRSoftMain  HRSoftMain.cpp  HRSoftTests  HRSoftTests.cpp
tp03/3-hrsoft/HRSoft/: Department.hpp  Employee.hpp  HRSoftSystem.hpp
tp04/: CMakeLists.txt  TP4.md  WARNING.md
tp04/backup/ex1-qcm/: qcm.hpp
tp04/backup/ex2-05-index-out/: PhoneBookEntry.hpp
tp04/backup/ex2-11-print-out/: PhoneBook.hpp
tp04/backup/ex2-13-print-concat/: PhoneBook.hpp
tp04/backup/ex2-23-return-refs/: PhoneBookEntry.hpp
tp04/backup/ex2-25-equality/: PhoneBook.hpp  PhoneNumber.hpp
tp04/backup/ex2-26-const-equality/: PhoneNumber.hpp
tp04/backup/ex2-35-unique-entry/: PhoneNumber.hpp
tp04/backup/ex3-01-types/: 01-types.hpp
tp04/backup/ex3-02-vector/: 02-vector.hpp
tp04/cmake/: configure_targets.cmake  run_tests.cmake  run_tests.sh.in
tp04/ex1/src/: qcm.hpp
tp04/ex2/src/: PhoneBook.hpp
tp04/ex2/tests/: 01-phone-number.cpp  12-print-correct.cpp  34-valid-entry.cpp  36-no-desinstanciation.cpp
tp04/ex3/src/: 01-types.hpp  02-vector.hpp
tp05/: CMakeLists.txt  TP5.md
tp05/ex2/: Card.cpp  Card.hpp  Player.cpp  Player.hpp  Tracker.cpp  Tracker.hpp  main.cpp
tp05/ex3/: Link.cpp  Link.hpp  LinkedList.cpp  LinkedList.hpp  Person.cpp  Person.hpp  Tracker.cpp  Tracker.hpp  main.cpp
tp06/: CMakeLists.txt  TP6.md
tp06/1-recipes/: Material.cpp  Material.hpp  ProgramData.cpp  ProgramData.hpp  Recipe.cpp  Recipe.hpp
tp06/2-ptr/: Object.hpp
tp07/: TP7.md
tp07/dungeon/: Character.hpp  Dungeon.cpp  Entity.hpp  Item.hpp  Potion.hpp  Trap.hpp
tp08/: TP8.md
tp08/cmake/: run_tests.sh.in
tp08/ex1/src/: qcm.hpp
tp08/ex2/src/: StringInstancePair.hpp  alias.hpp
tp08/ex2/tests/: 01-ptr-alias.cpp  10-pair.cpp  11-stable.cpp  13-destr2.cpp
tp08/ex3/src/: Base.hpp  DerivedInt.hpp  DerivedList.hpp  DerivedString.hpp  sandbox.cpp
tp08/ex3/tests/: 07-derived-list.cpp  08-derived-list-add-warning.cpp  09-derived-list-add.cpp  10-derived-list-add-dyn.cpp  11-derived-list-equality.cpp  12-derived-list-add-move.cpp  13-memory-warning.cpp
tp08_rev/: CMakeLists.txt  TP8.md
tp08_rev/ex1/src/: qcm.hpp
tp08_rev/ex2/lib/: Tracker.hpp
tp08_rev/ex2/src/: StringInstancePair.hpp  alias.hpp
tp08_rev/ex2/tests/: 12-destr1.cpp  14-copy.cpp
tp08_rev/ex3/src/: Base.hpp  DerivedInt.hpp  DerivedList.hpp  DerivedString.hpp
tp08_rev/ex3/tests/: 10-derived-list-add-dyn.cpp
tp09/: CMakeLists.txt  Point2d.cpp  Point3d.cpp  ex2_1.cpp  ex2_2.cpp  ex2_3.cpp  ex2_4.cpp
tp10/: CMakeLists.txt  TP10.md
tp10/src/: blend.cpp  gray.cpp  image.hpp  mandelbrot.cpp  pixels.hpp
tp11/: CMakeLists.txt  TP11.md
tp11/src/: factory.cpp  tostring.cpp
tp12/ex1/src/: qcm.hpp
tp12/ex2/src/: HybridArray.hpp
tp12/ex2/tests/: 06-dynamic-storage.cpp
tp12/ex3/src/: 00-rm-elems-for.hpp  01-rm-elems-alg.hpp  02-hashing.hpp  03-which-container.hpp  04-store-fcn.hpp  05-sum.hpp
tp12/ex3/tests/: 05-sum.cpp
tp12_rev/ex2/src/: HybridArray.hpp
tp12_rev/ex3/src/: 00-rm-elems-for.hpp  01-rm-elems-alg.hpp  02-hashing.hpp  04-store-fcn.hpp  05-sum.hpp  06-templates.hpp
